--- a/index.html
+++ b/index.html
@@ -18,59 +18,65 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+      <nav class="navigation">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-header">Studio</span></a
+        >
+        <ul class="navigation-menu">
           <li>
-            <a href="">Studio</a>
+            <a href="" class="navigation-item">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="" class="navigation-item">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="navigation-item">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="contacts-item"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="contacts-item"
+            >+11 (000) 111-11-11</a
+          >
         </li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="banner">
+        <h1 class="banner-text">Effective Solutions for Your Business</h1>
+        <button type="button" class="banner-button">Order Service</button>
       </section>
-      <section>
-        <ul>
-          <li>
+      <section class="adventages">
+        <ul class="adventages-list">
+          <li class="adventages-item">
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="adventages-item">
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="adventages-item">
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="adventages-item">
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
@@ -128,7 +134,9 @@
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-footer">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
