--- a/index.html
+++ b/index.html
@@ -86,48 +86,112 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="staff">
+        <h2 class="staff-title">Our Team</h2>
+        <ul class="staff-list">
+          <li class="staff-item">
             <img
               src="./images/mark.jpg"
               alt="Mark Guerrero photo"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <div class="staff-item-content">
+              <h3>Mark Guerrero</h3>
+              <p>Product Designer</p>
+            </div>
           </li>
-          <li>
+          <li class="staff-item">
             <img
               src="./images/tom.jpg"
               alt="Tom Ford photo"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <div class="staff-item-content">
+              <h3>Tom Ford</h3>
+              <p>Frontend Developer</p>
+            </div>
           </li>
-          <li>
+          <li class="staff-item">
             <img
               src="./images/camila.jpg"
               alt="Camila Garcia photo"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <div class="staff-item-content">
+              <h3>Camila Garcia</h3>
+              <p>Marketing</p>
+            </div>
           </li>
-          <li>
+          <li class="staff-item">
             <img
               src="./images/daniel.jpg"
               alt="Daniel Wilson photo"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <div class="staff-item-content">
+              <h3>Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="portfolio">
+        <h2 class="portfolio-title"></h2>
+        <ul>
+          <li>
+            <ul>
+              <li>
+                <img src="" alt="" />
+                <div>
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="" />
+                <div>
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="" />
+                <div>
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <ul>
+              <li>
+                <img src="" alt="" />
+                <div>
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="" />
+                <div>
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="" />
+                <div>
+                  <h3></h3>
+                  <p></p>
+                </div>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
