--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </section>
 
       <section class="staff">
-        <h2 class="staff-title">Our Team</h2>
+        <h2 class="staff-title">Our team</h2>
         <ul class="staff-list">
           <li class="staff-item">
             <img
@@ -98,7 +98,7 @@
             />
             <div class="staff-item-content">
               <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
+              <p>Product designer</p>
             </div>
           </li>
           <li class="staff-item">
@@ -110,7 +110,7 @@
             />
             <div class="staff-item-content">
               <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
+              <p>Frontend developer</p>
             </div>
           </li>
           <li class="staff-item">
@@ -134,61 +134,91 @@
             />
             <div class="staff-item-content">
               <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
+              <p>UI designer</p>
             </div>
           </li>
         </ul>
       </section>
 
       <section class="portfolio">
-        <h2 class="portfolio-title"></h2>
-        <ul>
+        <h2 class="portfolio-title">Our portfolio</h2>
+        <ul class="portfolio-list">
           <li>
-            <ul>
-              <li>
-                <img src="" alt="" />
-                <div>
-                  <h3></h3>
-                  <p></p>
+            <ul class="portfolio-list-row">
+              <li class="portfolio-item">
+                <img
+                  src="./images/banking.jpg"
+                  alt="Banking app screens"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h3>Banking app</h3>
+                  <p>App</p>
                 </div>
               </li>
-              <li>
-                <img src="" alt="" />
-                <div>
-                  <h3></h3>
-                  <p></p>
+              <li class="portfolio-item">
+                <img
+                  src="./images/cashless.jpg"
+                  alt="Cashless payment process"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h3>Cashless payment</h3>
+                  <p>Marketing</p>
                 </div>
               </li>
-              <li>
-                <img src="" alt="" />
-                <div>
-                  <h3></h3>
-                  <p></p>
+              <li class="portfolio-item">
+                <img
+                  src="./images/meditation.jpg"
+                  alt="Meditation app advert"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h3>Meditation app</h3>
+                  <p>App</p>
                 </div>
               </li>
             </ul>
           </li>
           <li>
-            <ul>
-              <li>
-                <img src="" alt="" />
-                <div>
-                  <h3></h3>
-                  <p></p>
+            <ul class="portfolio-list-row">
+              <li class="portfolio-item">
+                <img
+                  src="./images/taxi.jpg"
+                  alt="Taxi car"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h3>Taxi service</h3>
+                  <p>Marketing</p>
                 </div>
               </li>
-              <li>
-                <img src="" alt="" />
-                <div>
-                  <h3></h3>
-                  <p></p>
+              <li class="portfolio-item">
+                <img
+                  src="./images/screen.jpg"
+                  alt="Phone sceen"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h3>Screen illustrations</h3>
+                  <p>Design</p>
                 </div>
               </li>
-              <li>
-                <img src="" alt="" />
-                <div>
-                  <h3></h3>
-                  <p></p>
+              <li class="portfolio-item">
+                <img
+                  src="./images/courses.jpg"
+                  alt="A girl laughing"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h3>Online courses</h3>
+                  <p>Marketing</p>
                 </div>
               </li>
             </ul>
@@ -201,7 +231,7 @@
       <a href="./index.html" class="logo"
         >Web<span class="logo-footer">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
