Add navigation flags

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         >
         <ul class="navigation-menu">
           <li>
-            <a href="" class="navigation-item">Studio</a>
+            <a href="#studio" class="navigation-item">Studio</a>
           </li>
           <li>
-            <a href="" class="navigation-item">Portfolio</a>
+            <a href="#portfolio" class="navigation-item">Portfolio</a>
           </li>
           <li>
-            <a href="" class="navigation-item">Contacts</a>
+            <a href="#contacts" class="navigation-item">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul class="contacts">
+      <ul class="contacts" id="contacts">
         <li>
           <a href="mailto:info@devstudio.com" class="contacts-item"
             >info@devstudio.com</a
@@ -53,7 +53,9 @@
         <h1 class="banner-text">Effective Solutions for Your Business</h1>
         <button type="button" class="banner-button">Order Service</button>
       </section>
-      <section class="adventages">
+
+      <section class="adventages" id="studio">
+        <h2 class="adventages-title">Studio</h2>
         <ul class="adventages-list">
           <li class="adventages-item">
             <h3>Strategy</h3>
@@ -140,7 +142,7 @@
         </ul>
       </section>
 
-      <section class="portfolio">
+      <section class="portfolio" id="portfolio">
         <h2 class="portfolio-title">Our portfolio</h2>
         <ul class="portfolio-list">
           <li>
