--- a/index.html
+++ b/index.html
@@ -18,225 +18,179 @@
   </head>
   <body>
     <header>
-      <nav class="navigation">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul class="navigation-menu">
+      <div class="container header-container">
+        <nav class="navigation">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="navigation-menu">
+            <li>
+              <a href="#studio" class="navigation-item">Studio</a>
+            </li>
+            <li>
+              <a href="#portfolio" class="navigation-item">Portfolio</a>
+            </li>
+            <li>
+              <a href="#contacts" class="navigation-item">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts" id="contacts">
           <li>
-            <a href="#studio" class="navigation-item">Studio</a>
+            <a href="mailto:info@devstudio.com" class="contacts-item"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="#portfolio" class="navigation-item">Portfolio</a>
-          </li>
-          <li>
-            <a href="#contacts" class="navigation-item">Contacts</a>
+            <a href="tel:+110001111111" class="contacts-item"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
-      </nav>
-      <ul class="contacts" id="contacts">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts-item"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+110001111111" class="contacts-item"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <section class="banner">
-        <h1 class="banner-text">Effective Solutions for Your Business</h1>
-        <button type="button" class="banner-button">Order Service</button>
+        <div class="container banner-container">
+          <h1 class="banner-text">Effective Solutions for Your Business</h1>
+          <button type="button" class="banner-button">Order Service</button>
+        </div>
       </section>
 
-      <section class="adventages" id="studio">
-        <h2 class="adventages-title">Studio</h2>
-        <ul class="adventages-list">
-          <li class="adventages-item">
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="adventages-item">
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="adventages-item">
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="adventages-item">
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="adventages section" id="studio">
+        <div class="container">
+          <h2 class="adventages-title">Studio</h2>
+          <ul class="adventages-list">
+            <li class="adventages-item">
+              <h3>Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="adventages-item">
+              <h3>Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="adventages-item">
+              <h3>Diligence</h3>
+              <p>
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="adventages-item">
+              <h3>Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="staff">
-        <h2 class="staff-title">Our team</h2>
-        <ul class="staff-list">
-          <li class="staff-item">
-            <img
-              src="./images/mark.jpg"
-              alt="Mark Guerrero photo"
-              width="264"
-              height="260"
-            />
-            <div class="staff-item-content">
-              <h3>Mark Guerrero</h3>
-              <p>Product designer</p>
-            </div>
-          </li>
-          <li class="staff-item">
-            <img
-              src="./images/tom.jpg"
-              alt="Tom Ford photo"
-              width="264"
-              height="260"
-            />
-            <div class="staff-item-content">
-              <h3>Tom Ford</h3>
-              <p>Frontend developer</p>
-            </div>
-          </li>
-          <li class="staff-item">
-            <img
-              src="./images/camila.jpg"
-              alt="Camila Garcia photo"
-              width="264"
-              height="260"
-            />
-            <div class="staff-item-content">
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
-            </div>
-          </li>
-          <li class="staff-item">
-            <img
-              src="./images/daniel.jpg"
-              alt="Daniel Wilson photo"
-              width="264"
-              height="260"
-            />
-            <div class="staff-item-content">
-              <h3>Daniel Wilson</h3>
-              <p>UI designer</p>
-            </div>
-          </li>
-        </ul>
+      <section class="staff section">
+        <div class="container">
+          <h2 class="staff-title">Our team</h2>
+          <ul class="staff-list">
+            <li class="staff-item">
+              <img src="./images/mark.jpg" alt="Mark Guerrero photo" />
+              <div class="staff-item-content">
+                <h3>Mark Guerrero</h3>
+                <p>Product designer</p>
+              </div>
+            </li>
+            <li class="staff-item">
+              <img src="./images/tom.jpg" alt="Tom Ford photo" />
+              <div class="staff-item-content">
+                <h3>Tom Ford</h3>
+                <p>Frontend developer</p>
+              </div>
+            </li>
+            <li class="staff-item">
+              <img src="./images/camila.jpg" alt="Camila Garcia photo" />
+              <div class="staff-item-content">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+              </div>
+            </li>
+            <li class="staff-item">
+              <img src="./images/daniel.jpg" alt="Daniel Wilson photo" />
+              <div class="staff-item-content">
+                <h3>Daniel Wilson</h3>
+                <p>UI designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="portfolio" id="portfolio">
-        <h2 class="portfolio-title">Our portfolio</h2>
-        <ul class="portfolio-list">
-          <li>
-            <ul class="portfolio-list-row">
-              <li class="portfolio-item">
-                <img
-                  src="./images/banking.jpg"
-                  alt="Banking app screens"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-content">
-                  <h3>Banking app</h3>
-                  <p>App</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="./images/cashless.jpg"
-                  alt="Cashless payment process"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-content">
-                  <h3>Cashless payment</h3>
-                  <p>Marketing</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="./images/meditation.jpg"
-                  alt="Meditation app advert"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-content">
-                  <h3>Meditation app</h3>
-                  <p>App</p>
-                </div>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <ul class="portfolio-list-row">
-              <li class="portfolio-item">
-                <img
-                  src="./images/taxi.jpg"
-                  alt="Taxi car"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-content">
-                  <h3>Taxi service</h3>
-                  <p>Marketing</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="./images/screen.jpg"
-                  alt="Phone sceen"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-content">
-                  <h3>Screen illustrations</h3>
-                  <p>Design</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  src="./images/courses.jpg"
-                  alt="A girl laughing"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-content">
-                  <h3>Online courses</h3>
-                  <p>Marketing</p>
-                </div>
-              </li>
-            </ul>
-          </li>
-        </ul>
+      <section class="portfolio section" id="portfolio">
+        <div class="container">
+          <h2 class="portfolio-title">Our portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img src="./images/banking.jpg" alt="Banking app screens" />
+              <div class="portfolio-item-content">
+                <h3>Banking app</h3>
+                <p>App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/cashless.jpg" alt="Cashless payment process" />
+              <div class="portfolio-item-content">
+                <h3>Cashless payment</h3>
+                <p>Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/meditation.jpg" alt="Meditation app advert" />
+              <div class="portfolio-item-content">
+                <h3>Meditation app</h3>
+                <p>App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/taxi.jpg" alt="Taxi car" />
+              <div class="portfolio-item-content">
+                <h3>Taxi service</h3>
+                <p>Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/screen.jpg" alt="Phone sceen" />
+              <div class="portfolio-item-content">
+                <h3>Screen illustrations</h3>
+                <p>Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/courses.jpg" alt="A girl laughing" />
+              <div class="portfolio-item-content">
+                <h3>Online courses</h3>
+                <p>Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
