--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
             >Web<span class="logo-header">Studio</span></a
           >
           <ul class="navigation-menu">
-            <li>
-              <a href="#studio" class="navigation-item">Studio</a>
+            <li class="navigation-item active">
+              <a href="" class="navigation-item-link">Studio</a>
             </li>
-            <li>
-              <a href="#portfolio" class="navigation-item">Portfolio</a>
+            <li class="navigation-item">
+              <a href="#portfolio" class="navigation-item-link">Portfolio</a>
             </li>
-            <li>
-              <a href="#contacts" class="navigation-item">Contacts</a>
+            <li class="navigation-item">
+              <a href="#contacts" class="navigation-item-link">Contacts</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts" id="contacts">
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts-item"
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-item-link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+110001111111" class="contacts-item"
+          <li class="contacts-item">
+            <a href="tel:+110001111111" class="contacts-item-link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -63,6 +63,11 @@
           <h2 class="adventages-title">Studio</h2>
           <ul class="adventages-list">
             <li class="adventages-item">
+              <div class="adventages-icon-wrapper">
+                <svg width="64" height="64" class="adventages-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3>Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +75,11 @@
               </p>
             </li>
             <li class="adventages-item">
+              <div class="adventages-icon-wrapper">
+                <svg width="64" height="64" class="adventages-icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3>Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +87,11 @@
               </p>
             </li>
             <li class="adventages-item">
+              <div class="adventages-icon-wrapper">
+                <svg width="64" height="64" class="adventages-icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3>Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
@@ -84,6 +99,11 @@
               </p>
             </li>
             <li class="adventages-item">
+              <div class="adventages-icon-wrapper">
+                <svg width="64" height="64" class="adventages-icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3>Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -103,6 +123,28 @@
               <div class="staff-item-content">
                 <h3>Mark Guerrero</h3>
                 <p>Product designer</p>
+                <ul class="staff-social-list">
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="staff-item">
@@ -110,6 +152,28 @@
               <div class="staff-item-content">
                 <h3>Tom Ford</h3>
                 <p>Frontend developer</p>
+                <ul class="staff-social-list">
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="staff-item">
@@ -117,6 +181,28 @@
               <div class="staff-item-content">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
+                <ul class="staff-social-list">
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="staff-item">
@@ -124,6 +210,28 @@
               <div class="staff-item-content">
                 <h3>Daniel Wilson</h3>
                 <p>UI designer</p>
+                <ul class="staff-social-list">
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="staff-social-list-item">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
