finish portfolio-section HW4

--- a/index.html
+++ b/index.html
@@ -243,42 +243,90 @@
           <h2 class="portfolio-title">Our portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/banking.jpg" alt="Banking app screens" />
+              <div class="image-container">
+                <img src="./images/banking.jpg" alt="Banking app screens" />
+                <p class="portfolio-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3>Banking app</h3>
                 <p>App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/cashless.jpg" alt="Cashless payment process" />
+              <div class="image-container">
+                <img
+                  src="./images/cashless.jpg"
+                  alt="Cashless payment process"
+                />
+                <p class="portfolio-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3>Cashless payment</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/meditation.jpg" alt="Meditation app advert" />
+              <div class="image-container">
+                <img
+                  src="./images/meditation.jpg"
+                  alt="Meditation app advert"
+                />
+                <p class="portfolio-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3>Meditation app</h3>
                 <p>App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/taxi.jpg" alt="Taxi car" />
+              <div class="image-container">
+                <img src="./images/taxi.jpg" alt="Taxi car" />
+                <p class="portfolio-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3>Taxi service</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/screen.jpg" alt="Phone sceen" />
+              <div class="image-container">
+                <img src="./images/screen.jpg" alt="Phone sceen" />
+                <p class="portfolio-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3>Screen illustrations</h3>
                 <p>Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/courses.jpg" alt="A girl laughing" />
+              <div class="image-container">
+                <img src="./images/courses.jpg" alt="A girl laughing" />
+                <p class="portfolio-description">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-content">
                 <h3>Online courses</h3>
                 <p>Marketing</p>
